--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
     "bluebird": "2.9.8",
     "fs-extra": "0.23.1",
     "fstream": "1.0.7",
-    "moment": "2.8.3",
     "sax": "1.1.1",
     "timm": "1.2.3",
-    "unzip": "0.1.11"
+    "unzip": "0.1.11",
+    "uuid": "3.0.1"
   },
   "devDependencies": {
     "babel-cli": "6.16.0",
@@ -73,9 +73,9 @@
     "flow-bin": "0.36.0",
     "flow-copy-source": "1.1.0",
     "jest": "17.0.3",
-    "jest-html": "^1.3.2",
+    "jest-html": "^1.3.3",
     "nyc": "8.4.0",
-    "storyboard": "^2.3.0",
+    "storyboard": "^2.3.1",
     "xxl": "^0.1.1"
   },
   "jest": {
