--- a/package.json
+++ b/package.json
@@ -43,38 +43,36 @@
     "node": ">=6"
   },
   "dependencies": {
-    "archiver": "0.14.4",
-    "bluebird": "2.9.8",
-    "fs-extra": "0.23.1",
-    "fstream": "1.0.7",
-    "sax": "1.1.1",
-    "timm": "1.2.3",
+    "archiver": "1.3.0",
+    "bluebird": "3.4.6",
+    "fs-extra": "1.0.0",
+    "fstream": "1.0.10",
+    "sax": "1.2.1",
     "unzip": "0.1.11",
     "uuid": "3.0.1"
   },
   "devDependencies": {
-    "babel-cli": "6.16.0",
-    "babel-core": "6.17.0",
-    "babel-eslint": "7.0.0",
-    "babel-jest": "17.0.2",
-    "babel-polyfill": "6.16.0",
-    "babel-preset-es2015": "6.16.0",
+    "babel-cli": "6.18.0",
+    "babel-core": "6.20.0",
+    "babel-eslint": "7.1.1",
+    "babel-jest": "18.0.0",
+    "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-0": "6.16.0",
     "coveralls": "2.11.15",
-    "cross-env": "^1.0.8",
-    "eslint": "3.8.1",
-    "eslint-config-airbnb": "12.0.0",
-    "eslint-plugin-flowtype": "2.20.0",
-    "eslint-plugin-import": "1.16.0",
+    "cross-env": "3.1.3",
+    "eslint": "3.12.2",
+    "eslint-config-airbnb": "13.0.0",
+    "eslint-plugin-flowtype": "2.29.1",
+    "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-react": "6.4.1",
+    "eslint-plugin-react": "6.8.0",
     "extract-docs": "^1.2.0",
-    "flow-bin": "0.36.0",
+    "flow-bin": "0.37.0",
     "flow-copy-source": "1.1.0",
-    "jest": "17.0.3",
+    "jest": "18.0.0",
     "jest-html": "^1.3.3",
-    "nyc": "8.4.0",
+    "nyc": "10.0.0",
     "storyboard": "^2.3.1",
     "xxl": "^0.1.1"
   },
