--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "extract-docs": "^1.2.0",
     "flow-bin": "0.37.0",
     "flow-copy-source": "1.1.0",
+    "isomorphic-fetch": "2.2.1",
     "jest": "18.0.0",
     "jest-html": "^1.3.3",
     "nyc": "10.0.0",
