Add support for commands in headers, footers and elsewhere

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "bluebird": "3.4.6",
     "fs-extra": "1.0.0",
     "fstream": "1.0.10",
+    "globby": "6.1.0",
     "sax": "1.2.1",
     "timm": "1.2.3",
     "unzip": "0.1.11",
