--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "travis": "npm run compile && npm run test",
     "lint": "eslint src",
     "flow": "flow check || exit 0",
-    "xxl": "xxl --src \"[\\\"src\\\"]\"",
+    "xxl": "xxl --src src",
     "jest": "jest --watch --coverage",
     "jest-html": "jest-html --snapshot-patterns \"src/**/*.snap\"",
     "test": "npm run testCovFull",
@@ -63,21 +63,21 @@
     "babel-preset-stage-0": "6.16.0",
     "coveralls": "2.11.15",
     "cross-env": "3.1.3",
-    "eslint": "3.12.2",
+    "eslint": "3.14.0",
     "eslint-config-airbnb": "13.0.0",
     "eslint-plugin-flowtype": "2.29.1",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "2.2.3",
     "eslint-plugin-react": "6.8.0",
-    "extract-docs": "^1.2.0",
-    "flow-bin": "0.37.0",
+    "extract-docs": "^1.4.0",
+    "flow-bin": "0.38.0",
     "flow-copy-source": "1.1.0",
     "isomorphic-fetch": "2.2.1",
     "jest": "18.0.0",
     "jest-html": "^1.3.3",
     "nyc": "10.0.0",
     "storyboard": "^2.3.1",
-    "xxl": "^0.1.1"
+    "xxl": "^1.0.0"
   },
   "jest": {
     "testRegex": "src/.*__tests__/.*\\.(test|spec)\\.(js|jsx)$",
