--- a/package.json
+++ b/package.json
@@ -49,39 +49,42 @@
   "dependencies": {
     "archiver": "1.3.0",
     "fs-extra": "^3.0.1",
-    "fstream": "1.0.10",
+    "fstream": "1.0.11",
     "globby": "6.1.0",
-    "sax": "1.2.1",
-    "timm": "1.2.3",
+    "sax": "1.2.4",
+    "timm": "1.2.5",
     "unzip": "0.1.11",
-    "uuid": "3.0.1"
+    "uuid": "3.1.0"
   },
   "devDependencies": {
-    "babel-cli": "6.18.0",
-    "babel-core": "6.20.0",
-    "babel-eslint": "7.1.1",
+    "babel-cli": "6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
     "babel-jest": "18.0.0",
-    "babel-polyfill": "6.20.0",
-    "babel-preset-es2015": "6.18.0",
-    "babel-preset-react": "6.16.0",
-    "babel-preset-stage-0": "6.16.0",
-    "coveralls": "2.11.15",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
+    "coveralls": "2.13.1",
     "cross-env": "3.1.3",
-    "eslint": "3.14.0",
-    "eslint-config-airbnb": "13.0.0",
-    "eslint-plugin-flowtype": "2.29.1",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-react": "6.8.0",
-    "extract-docs": "^1.4.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "14.1.0",
+    "eslint-config-prettier": "2.3.0",
+    "eslint-plugin-flowtype": "^2.32.1",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "4.0.0",
+    "eslint-plugin-react": "^6.10.3",
+    "extract-docs": "^1.5.2",
     "flow-bin": "0.38.0",
-    "flow-copy-source": "1.1.0",
+    "flow-copy-source": "1.2.0",
     "isomorphic-fetch": "2.2.1",
     "jest": "18.0.0",
-    "jest-html": "^1.3.3",
+    "jest-html": "^1.3.4",
     "nyc": "10.0.0",
-    "storyboard": "^2.3.1",
-    "xxl": "^1.0.0"
+    "prettier": "^1.5.2",
+    "storyboard": "^3.1.1",
+    "storyboard-listener-console": "^3.1.1",
+    "xxl": "^1.2.0"
   },
   "jest": {
     "testRegex": "src/.*__tests__/.*\\.(test|spec)\\.(js|jsx)$",
