--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docx-templates",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "description": "Template-based docx report creation",
   "main": "lib/index.js",
   "author": "Guillermo Grau Panea",
@@ -28,15 +28,13 @@
     "compile:copy": "flow-copy-source -i \"**/__mocks__/**\" -i \"**/__tests__/**\" src lib",
     "compile:run": "babel --out-dir lib --ignore \"**/__mocks__/**\",\"**/__tests__/**\" src",
     "docs": "extract-docs --template docs/templates/README.md --output README.md",
-    "build": "node package && npm run lint && npm run flow && npm run test && npm run compile && npm run docs && npm run xxl",
-    "travis": "npm run compile && npm run test",
+    "build": "yarn lint && yarn flow && yarn test && yarn compile && yarn docs && yarn xxl",
+    "travis": "yarn compile && yarn test",
     "lint": "eslint src",
     "flow": "flow check || exit 0",
-    "xxl": "xxl --src src",
     "jest": "jest --watch --coverage",
     "jest-html": "jest-html --snapshot-patterns \"src/**/*.snap\"",
     "test": "npm run testCovFull",
-    "testFast": "jest",
     "testCovFull": "npm run testCovPrepare && npm run testDev && npm run testCovReport",
     "testCovPrepare": "rm -rf ./coverage .nyc_output .nyc_tmp && mkdir .nyc_tmp",
     "testDev": "cross-env NODE_ENV=development jest --coverage && mv .nyc_output/coverage-final.json .nyc_tmp/coverage-dev.json && rm -rf .nyc_output",
@@ -75,7 +73,7 @@
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-react": "^6.10.3",
     "extract-docs": "^1.5.2",
-    "flow-bin": "0.38.0",
+    "flow-bin": "^0.49.1",
     "flow-copy-source": "1.2.0",
     "isomorphic-fetch": "2.2.1",
     "jest": "18.0.0",
