--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "archiver": "1.3.0",
+    "babel-runtime": "6.23.0",
     "fs-extra": "^3.0.1",
     "fstream": "1.0.11",
     "globby": "6.1.0",
@@ -59,7 +60,7 @@
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-jest": "18.0.0",
-    "babel-polyfill": "^6.23.0",
+    "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
