--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "main": "lib/index.js",
   "author": "Guillermo Grau Panea",
   "license": "MIT",
-  "keywords": ["docx", "office", "word", "ms-word", "report", "template"],
+  "keywords": [
+    "docx",
+    "office",
+    "word",
+    "ms-word",
+    "report",
+    "template"
+  ],
   "homepage": "https://github.com/guigrpa/docx-templates#readme",
   "bugs": {
     "url": "https://github.com/guigrpa/docx-templates/issues"
@@ -43,6 +50,7 @@
     "fs-extra": "^3.0.1",
     "fstream": "1.0.11",
     "globby": "6.1.0",
+    "jszip": "^3.1.5",
     "sax": "1.2.4",
     "timm": "1.2.5",
     "unzip": "0.1.11",
@@ -66,6 +74,7 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-react": "^6.10.3",
+    "express": "^4.16.2",
     "extract-docs": "^1.5.2",
     "flow-bin": "^0.49.1",
     "flow-copy-source": "1.2.0",
@@ -81,8 +90,14 @@
   "jest": {
     "testRegex": "src/.*__tests__/.*\\.(test|spec)\\.(js|jsx)$",
     "coverageDirectory": ".nyc_output",
-    "coverageReporters": ["json", "text", "html"],
-    "snapshotSerializers": ["<rootDir>/node_modules/jest-html"],
+    "coverageReporters": [
+      "json",
+      "text",
+      "html"
+    ],
+    "snapshotSerializers": [
+      "<rootDir>/node_modules/jest-html"
+    ],
     "collectCoverageFrom": [
       "src/**/*.js",
       "!src/debug.js",
