--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "type": "git",
     "url": "git+https://github.com/guigrpa/docx-templates.git"
   },
+  "browser": {
+    "./lib/index.js": "./lib/docx-templates.js"
+  },
   "scripts": {
-    "compile": "yarn compile:prepare && yarn compile:copy && yarn compile:run",
+    "compile": "yarn compile:prepare && yarn compile:copy && yarn compile:run && yarn compile:browser",
     "compileWatch": "yarn compile:prepare && yarn compile:copy && yarn compile:run -- --watch",
     "compile:prepare": "rm -rf ./lib && mkdir lib",
     "compile:copy": "flow-copy-source -i \"**/__mocks__/**\" -i \"**/__tests__/**\" src lib",
     "compile:run": "babel --out-dir lib --ignore \"**/__mocks__/**\",\"**/__tests__/**\" src",
+    "compile:browser": "browserify lib/index-browser.js --s docx-templates | uglifyjs -c > lib/docx-templates.js && cp lib/docx-templates.js examples/swapi/www/",
     "docs": "extract-docs --template docs/templates/README.md --output README.md",
     "build": "yarn lint && yarn flow && yarn test && yarn compile && yarn docs && yarn xxl",
     "travis": "yarn compile && yarn test",
@@ -45,16 +49,11 @@
     "node": ">=6"
   },
   "dependencies": {
-    "archiver": "1.3.0",
     "babel-runtime": "6.23.0",
     "fs-extra": "^3.0.1",
-    "fstream": "1.0.11",
-    "globby": "6.1.0",
     "jszip": "^3.1.5",
     "sax": "1.2.4",
-    "timm": "1.2.5",
-    "unzip": "0.1.11",
-    "uuid": "3.1.0"
+    "timm": "1.2.5"
   },
   "devDependencies": {
     "babel-cli": "6.24.1",
@@ -65,6 +64,7 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
+    "browserify": "^15.0.0",
     "coveralls": "2.13.1",
     "cross-env": "3.1.3",
     "eslint": "^3.19.0",
@@ -85,6 +85,7 @@
     "prettier": "^1.5.2",
     "storyboard": "^3.1.1",
     "storyboard-listener-console": "^3.1.1",
+    "uglify-es": "^3.3.5",
     "xxl": "^1.2.0"
   },
   "jest": {
