--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
   "browser": "lib/indexBrowser.js",
   "author": "Guillermo Grau Panea",
   "license": "MIT",
-  "keywords": ["docx", "office", "word", "ms-word", "report", "template"],
+  "keywords": [
+    "docx",
+    "office",
+    "word",
+    "ms-word",
+    "report",
+    "template"
+  ],
   "homepage": "https://github.com/guigrpa/docx-templates#readme",
   "bugs": {
     "url": "https://github.com/guigrpa/docx-templates/issues"
@@ -17,22 +24,15 @@
   },
   "scripts": {
     "compile": "yarn compile:prepare && yarn compile:copy && yarn compile:run",
-    "compileWatch":
-      "yarn compile:prepare && yarn compile:copy && yarn compile:run -- --watch",
+    "compileWatch": "yarn compile:prepare && yarn compile:copy && yarn compile:run -- --watch",
     "compile:prepare": "rm -rf ./lib && mkdir lib",
-    "compile:copy":
-      "flow-copy-source -i \"**/__mocks__/**\" -i \"**/__tests__/**\" src lib",
-    "compile:run":
-      "babel --out-dir lib --ignore \"**/__mocks__/**\",\"**/__tests__/**\" src",
-    "build:browser":
-      "browserify lib/indexBrowser.js --s docx-templates -u lib/debug.js > examples/swapi/www/docx-templates.js",
+    "compile:copy": "flow-copy-source -i \"**/__mocks__/**\" -i \"**/__tests__/**\" src lib",
+    "compile:run": "babel --out-dir lib --ignore \"**/__mocks__/**\",\"**/__tests__/**\" src",
+    "build:browser": "browserify lib/indexBrowser.js --s docx-templates -u lib/debug.js > examples/swapi/www/docx-templates.js",
     "start": "cd examples/swapi && node swapi-node swapi-complex.docx",
-    "startBrowser":
-      "yarn build:browser && node examples/swapi/swapi-browser.js",
-    "docs":
-      "extract-docs --template docs/templates/README.md --output README.md",
-    "build":
-      "yarn lint && yarn flow && yarn test && yarn compile && yarn docs && yarn xxl",
+    "startBrowser": "yarn build:browser && node examples/swapi/swapi-browser.js",
+    "docs": "extract-docs --template docs/templates/README.md --output README.md",
+    "build": "yarn lint && yarn flow && yarn test && yarn compile && yarn docs && yarn xxl",
     "travis": "yarn compile && yarn test",
     "lint": "eslint src",
     "flow": "flow check || exit 0",
@@ -40,14 +40,10 @@
     "jest-html": "jest-html --snapshot-patterns \"src/**/*.snap\"",
     "test": "yarn testCovFull",
     "testCovFull": "yarn testCovPrepare && yarn testDev && yarn testCovReport",
-    "testCovPrepare":
-      "rm -rf ./coverage .nyc_output .nyc_tmp && mkdir .nyc_tmp",
-    "testDev":
-      "NODE_ENV=development jest --coverage && mv .nyc_output/coverage-final.json .nyc_tmp/coverage-dev.json && rm -rf .nyc_output",
-    "testProd":
-      "NODE_ENV=production jest --coverage && mv .nyc_output/coverage-final.json .nyc_tmp/coverage-prod.json && rm -rf .nyc_output",
-    "testCovReport":
-      "cp -r .nyc_tmp .nyc_output && nyc report --reporter=html --reporter=lcov --reporter=text"
+    "testCovPrepare": "rm -rf ./coverage .nyc_output .nyc_tmp && mkdir .nyc_tmp",
+    "testDev": "NODE_ENV=development jest --coverage && mv .nyc_output/coverage-final.json .nyc_tmp/coverage-dev.json && rm -rf .nyc_output",
+    "testProd": "NODE_ENV=production jest --coverage && mv .nyc_output/coverage-final.json .nyc_tmp/coverage-prod.json && rm -rf .nyc_output",
+    "testCovReport": "cp -r .nyc_tmp .nyc_output && nyc report --reporter=html --reporter=lcov --reporter=text"
   },
   "engines": {
     "node": ">=6"
@@ -86,6 +82,7 @@
     "jest": "18.0.0",
     "jest-html": "^1.3.4",
     "nyc": "10.0.0",
+    "oao": "^1.2.1",
     "prettier": "^1.10.2",
     "storyboard": "^3.1.1",
     "storyboard-listener-console": "^3.1.1",
@@ -94,8 +91,14 @@
   "jest": {
     "testRegex": "src/.*__tests__/.*\\.(test|spec)\\.(js|jsx)$",
     "coverageDirectory": ".nyc_output",
-    "coverageReporters": ["json", "text", "html"],
-    "snapshotSerializers": ["<rootDir>/node_modules/jest-html"],
+    "coverageReporters": [
+      "json",
+      "text",
+      "html"
+    ],
+    "snapshotSerializers": [
+      "<rootDir>/node_modules/jest-html"
+    ],
     "collectCoverageFrom": [
       "src/**/*.js",
       "!src/debug.js",
