--- a/package.json
+++ b/package.json
@@ -81,6 +81,8 @@
     "isomorphic-fetch": "2.2.1",
     "jest": "18.0.0",
     "jest-html": "^1.3.4",
+    "md5": "^2.2.1",
+    "mockdate": "^2.0.2",
     "nyc": "10.0.0",
     "oao": "^1.2.1",
     "prettier": "^1.10.2",
