--- a/packages/example-webpack/package.json
+++ b/packages/example-webpack/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-browserify",
+  "name": "example-webpack",
   "private": true,
   "version": "2.3.2",
   "description": "Template-based docx report creation",
@@ -9,23 +9,31 @@
   "license": "MIT",
   "keywords": ["docx", "office", "word", "ms-word", "report", "template"],
   "homepage": "https://github.com/guigrpa/docx-templates#readme",
-  "bugs": { "url": "https://github.com/guigrpa/docx-templates/issues" },
+  "bugs": {
+    "url": "https://github.com/guigrpa/docx-templates/issues"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/guigrpa/docx-templates.git"
   },
   "scripts": {
-    "build":
-      "browserify ../docx-templates/lib/indexBrowser.js --s docx-templates -u ../docx-templates/lib/debug.js > public/docx-templates.js",
+    "buildWatch": "yarn webpack -w",
+    "build": "yarn webpack --p",
+    "webpack":
+      "webpack --config ./webpackConfig.js --color --progress --display-chunks",
     "start": "yarn build && node server"
   },
   "dependencies": {
-    "body-parser": "^1.18.2",
-    "browserify": "^15.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "docx-templates": "*",
-    "express": "^4.16.2",
     "isomorphic-fetch": "2.2.1",
     "prettier": "^1.10.2",
+    "webpack": "^3.10.0",
     "yaqrcode": "^0.2.1"
   }
 }
