--- a/packages/example-webpack/package.json
+++ b/packages/example-webpack/package.json
@@ -30,7 +30,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "body-parser": "^1.18.2",
     "docx-templates": "*",
+    "express": "^4.16.2",
     "isomorphic-fetch": "2.2.1",
     "prettier": "^1.10.2",
     "webpack": "^3.10.0",
