--- a/packages/example-node/package.json
+++ b/packages/example-node/package.json
@@ -1,15 +1,24 @@
 {
   "name": "example-node",
   "private": true,
-  "version": "2.3.2",
+  "version": "2.4.0",
   "description": "Template-based docx report creation",
   "main": "lib/indexNode.js",
   "browser": "lib/indexBrowser.js",
   "author": "Guillermo Grau Panea",
   "license": "MIT",
-  "keywords": ["docx", "office", "word", "ms-word", "report", "template"],
+  "keywords": [
+    "docx",
+    "office",
+    "word",
+    "ms-word",
+    "report",
+    "template"
+  ],
   "homepage": "https://github.com/guigrpa/docx-templates#readme",
-  "bugs": { "url": "https://github.com/guigrpa/docx-templates/issues" },
+  "bugs": {
+    "url": "https://github.com/guigrpa/docx-templates/issues"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/guigrpa/docx-templates.git"
