--- a/packages/example-webpack/package.json
+++ b/packages/example-webpack/package.json
@@ -1,13 +1,20 @@
 {
   "name": "example-webpack",
   "private": true,
-  "version": "2.3.2",
+  "version": "2.4.0",
   "description": "Template-based docx report creation",
   "main": "lib/indexNode.js",
   "browser": "lib/indexBrowser.js",
   "author": "Guillermo Grau Panea",
   "license": "MIT",
-  "keywords": ["docx", "office", "word", "ms-word", "report", "template"],
+  "keywords": [
+    "docx",
+    "office",
+    "word",
+    "ms-word",
+    "report",
+    "template"
+  ],
   "homepage": "https://github.com/guigrpa/docx-templates#readme",
   "bugs": {
     "url": "https://github.com/guigrpa/docx-templates/issues"
@@ -19,8 +26,7 @@
   "scripts": {
     "buildWatch": "yarn webpack -w",
     "build": "yarn webpack --p",
-    "webpack":
-      "webpack --config ./webpackConfig.js --color --progress --display-chunks",
+    "webpack": "webpack --config ./webpackConfig.js --color --progress --display-chunks",
     "start": "yarn build && node server"
   },
   "dependencies": {
