--- a/packages/docx-templates/package.json
+++ b/packages/docx-templates/package.json
@@ -6,14 +6,7 @@
   "browser": "lib/indexBrowser.js",
   "author": "Guillermo Grau Panea",
   "license": "MIT",
-  "keywords": [
-    "docx",
-    "office",
-    "word",
-    "ms-word",
-    "report",
-    "template"
-  ],
+  "keywords": ["docx", "office", "word", "ms-word", "report", "template"],
   "homepage": "https://github.com/guigrpa/docx-templates#readme",
   "bugs": {
     "url": "https://github.com/guigrpa/docx-templates/issues"
@@ -24,19 +17,26 @@
   },
   "scripts": {
     "compile": "yarn compile:prepare && yarn compile:copy && yarn compile:run",
-    "compileWatch": "yarn compile:prepare && yarn compile:copy && yarn compile:run --watch",
+    "compileWatch":
+      "yarn compile:prepare && yarn compile:copy && yarn compile:run --watch",
     "compile:prepare": "rm -rf ./lib && mkdir lib",
-    "compile:copy": "flow-copy-source -i \"**/__mocks__/**\" -i \"**/__tests__/**\" src lib",
-    "compile:run": "babel --out-dir lib --ignore \"**/__mocks__/**\",\"**/__tests__/**\" src",
+    "compile:copy":
+      "flow-copy-source -i \"**/__mocks__/**\" -i \"**/__tests__/**\" src lib",
+    "compile:run":
+      "babel --out-dir lib --ignore \"**/__mocks__/**\",\"**/__tests__/**\" src",
     "start": "cd examples/swapi && node swapi-node swapi-complex.docx",
     "travis": "yarn compile && yarn test",
     "jest": "jest --watch --coverage",
     "test": "yarn testCovFull",
     "testCovFull": "yarn testCovPrepare && yarn testDev && yarn testCovReport",
-    "testCovPrepare": "rm -rf ./coverage .nyc_output .nyc_tmp && mkdir .nyc_tmp",
-    "testDev": "NODE_ENV=development jest --coverage && mv .nyc_output/coverage-final.json .nyc_tmp/coverage-dev.json && rm -rf .nyc_output",
-    "testProd": "NODE_ENV=production jest --coverage && mv .nyc_output/coverage-final.json .nyc_tmp/coverage-prod.json && rm -rf .nyc_output",
-    "testCovReport": "cp -r .nyc_tmp .nyc_output && nyc report --reporter=html --reporter=lcov --reporter=text"
+    "testCovPrepare":
+      "rm -rf ./coverage .nyc_output .nyc_tmp && mkdir .nyc_tmp",
+    "testDev":
+      "NODE_ENV=development jest --coverage && mv .nyc_output/coverage-final.json .nyc_tmp/coverage-dev.json && rm -rf .nyc_output",
+    "testProd":
+      "NODE_ENV=production jest --coverage && mv .nyc_output/coverage-final.json .nyc_tmp/coverage-prod.json && rm -rf .nyc_output",
+    "testCovReport":
+      "cp -r .nyc_tmp .nyc_output && nyc report --reporter=html --reporter=lcov --reporter=text"
   },
   "engines": {
     "node": ">=6"
@@ -63,16 +63,13 @@
     "nyc": "10.0.0",
     "prettier": "^1.10.2",
     "storyboard": "^3.1.1",
-    "storyboard-listener-console": "^3.1.1"
+    "storyboard-listener-console": "^3.1.1",
+    "yaqrcode": "^0.2.1"
   },
   "jest": {
     "testRegex": "src/.*__tests__/.*\\.(test|spec)\\.(js|jsx)$",
     "coverageDirectory": ".nyc_output",
-    "coverageReporters": [
-      "json",
-      "text",
-      "html"
-    ],
+    "coverageReporters": ["json", "text", "html"],
     "collectCoverageFrom": [
       "src/**/*.js",
       "!src/debug.js",
