--- a/packages/docx-templates/package.json
+++ b/packages/docx-templates/package.json
@@ -1,12 +1,19 @@
 {
   "name": "docx-templates",
-  "version": "2.4.0",
+  "version": "2.4.1",
   "description": "Template-based docx report creation",
   "main": "lib/indexNode.js",
   "browser": "lib/indexBrowser.js",
   "author": "Guillermo Grau Panea",
   "license": "MIT",
-  "keywords": ["docx", "office", "word", "ms-word", "report", "template"],
+  "keywords": [
+    "docx",
+    "office",
+    "word",
+    "ms-word",
+    "report",
+    "template"
+  ],
   "homepage": "https://github.com/guigrpa/docx-templates#readme",
   "bugs": {
     "url": "https://github.com/guigrpa/docx-templates/issues"
@@ -17,26 +24,19 @@
   },
   "scripts": {
     "compile": "yarn compile:prepare && yarn compile:copy && yarn compile:run",
-    "compileWatch":
-      "yarn compile:prepare && yarn compile:copy && yarn compile:run --watch",
+    "compileWatch": "yarn compile:prepare && yarn compile:copy && yarn compile:run --watch",
     "compile:prepare": "rm -rf ./lib && mkdir lib",
-    "compile:copy":
-      "flow-copy-source -i \"**/__mocks__/**\" -i \"**/__tests__/**\" src lib",
-    "compile:run":
-      "babel --out-dir lib --ignore \"**/__mocks__/**\",\"**/__tests__/**\" src",
+    "compile:copy": "flow-copy-source -i \"**/__mocks__/**\" -i \"**/__tests__/**\" src lib",
+    "compile:run": "babel --out-dir lib --ignore \"**/__mocks__/**\",\"**/__tests__/**\" src",
     "start": "cd examples/swapi && node swapi-node swapi-complex.docx",
     "travis": "yarn compile && yarn test",
     "jest": "jest --watch --coverage",
     "test": "yarn testCovFull",
     "testCovFull": "yarn testCovPrepare && yarn testDev && yarn testCovReport",
-    "testCovPrepare":
-      "rm -rf ./coverage .nyc_output .nyc_tmp && mkdir .nyc_tmp",
-    "testDev":
-      "NODE_ENV=development jest --coverage && mv .nyc_output/coverage-final.json .nyc_tmp/coverage-dev.json && rm -rf .nyc_output",
-    "testProd":
-      "NODE_ENV=production jest --coverage && mv .nyc_output/coverage-final.json .nyc_tmp/coverage-prod.json && rm -rf .nyc_output",
-    "testCovReport":
-      "cp -r .nyc_tmp .nyc_output && nyc report --reporter=html --reporter=lcov --reporter=text"
+    "testCovPrepare": "rm -rf ./coverage .nyc_output .nyc_tmp && mkdir .nyc_tmp",
+    "testDev": "NODE_ENV=development jest --coverage && mv .nyc_output/coverage-final.json .nyc_tmp/coverage-dev.json && rm -rf .nyc_output",
+    "testProd": "NODE_ENV=production jest --coverage && mv .nyc_output/coverage-final.json .nyc_tmp/coverage-prod.json && rm -rf .nyc_output",
+    "testCovReport": "cp -r .nyc_tmp .nyc_output && nyc report --reporter=html --reporter=lcov --reporter=text"
   },
   "engines": {
     "node": ">=6"
@@ -69,7 +69,11 @@
   "jest": {
     "testRegex": "src/.*__tests__/.*\\.(test|spec)\\.(js|jsx)$",
     "coverageDirectory": ".nyc_output",
-    "coverageReporters": ["json", "text", "html"],
+    "coverageReporters": [
+      "json",
+      "text",
+      "html"
+    ],
     "collectCoverageFrom": [
       "src/**/*.js",
       "!src/debug.js",
