--- a/packages/docx-templates/package.json
+++ b/packages/docx-templates/package.json
@@ -29,6 +29,7 @@
     "compile:copy": "flow-copy-source -i \"**/__mocks__/**\" -i \"**/__tests__/**\" src lib",
     "compile:run": "babel --out-dir lib --ignore \"**/__mocks__/**\",\"**/__tests__/**\" src",
     "start": "cd examples/swapi && node swapi-node swapi-complex.docx",
+    "playground": "cd examples/svg && node svg-node svg.docx",
     "travis": "yarn compile && yarn test",
     "jest": "jest --watch --coverage",
     "test": "yarn testCovFull",
