--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "flow": "flow check || exit 0",
     "xxl": "xxl --src packages/docx-templates/src --exclude __tests__",
     "test": "cd packages/docx-templates && yarn test",
-    "travis": "cd packages/docx-templates && yarn travis"
+    "travis": "cd packages/docx-templates && yarn travis",
+    "prettier": "prettier --single-quote --trailing-comma es5 --write \"packages/**/*.js\""
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
@@ -48,7 +49,7 @@
     "flow-bin": "^0.49.1",
     "flow-copy-source": "1.2.0",
     "oao": "^1.5.1",
-    "prettier": "^1.10.2",
+    "prettier": "^1.14.2",
     "xxl": "^1.2.0"
   }
 }
