--- a/package.json
+++ b/package.json
@@ -37,15 +37,15 @@
     "prettier": "prettier --single-quote --trailing-comma es5 --write \"packages/**/*.js\""
   },
   "devDependencies": {
-    "babel-eslint": "^7.2.3",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "14.1.0",
-    "eslint-config-prettier": "2.3.0",
-    "eslint-plugin-flowtype": "^2.32.1",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "4.0.0",
-    "eslint-plugin-react": "^6.10.3",
-    "extract-docs": "^1.5.2",
+    "babel-eslint": "^9.0.0",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.0.1",
+    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "extract-docs": "^1.6.1",
     "flow-bin": "^0.49.1",
     "flow-copy-source": "1.2.0",
     "oao": "^1.5.1",
