--- a/packages/docx-templates/package.json
+++ b/packages/docx-templates/package.json
@@ -42,16 +42,16 @@
     "node": ">=6"
   },
   "dependencies": {
-    "babel-runtime": "6.23.0",
+    "babel-runtime": "^6.26.0",
     "fs-extra": "^3.0.1",
     "jszip": "^3.1.5",
     "sax": "1.2.4",
-    "timm": "1.2.5",
-    "vm2": "^3.6.1"
+    "timm": "^1.6.1",
+    "vm2": "^3.6.3"
   },
   "devDependencies": {
-    "babel-cli": "6.24.1",
-    "babel-core": "^6.25.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-jest": "18.0.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-es2015": "6.24.1",
@@ -63,8 +63,8 @@
     "mockdate": "^2.0.2",
     "nyc": "10.0.0",
     "prettier": "^1.14.2",
-    "storyboard": "^3.1.1",
-    "storyboard-listener-console": "^3.1.1",
+    "storyboard": "^3.1.4",
+    "storyboard-listener-console": "^3.1.4",
     "yaqrcode": "^0.2.1"
   },
   "jest": {
