--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "docx-templates",
   "private": true,
-  "version": "2.8.0",
+  "version": "2.9.0-rc.0",
   "description": "Template-based docx report creation",
   "author": "Guillermo Grau Panea",
   "license": "MIT",
