--- a/packages/docx-templates/package.json
+++ b/packages/docx-templates/package.json
@@ -46,8 +46,7 @@
     "fs-extra": "^3.0.1",
     "jszip": "^3.1.5",
     "sax": "1.2.4",
-    "timm": "^1.6.1",
-    "vm2": "^3.6.3"
+    "timm": "^1.6.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
