--- a/packages/docx-templates/package.json
+++ b/packages/docx-templates/package.json
@@ -46,20 +46,21 @@
   },
   "devDependencies": {
     "@types/fs-extra": "^8.1.0",
+    "@types/jest": "^25.1.4",
     "@types/md5": "^2.1.33",
     "@types/node": "^13.9.2",
-    "@types/jest": "^25.1.4",
+    "@types/qrcode": "^1.3.4",
     "coveralls": "2.13.1",
     "jest": "^25.1.0",
     "md5": "^2.2.1",
     "mockdate": "^2.0.5",
     "nyc": "10.0.0",
     "prettier": "^1.18.2",
+    "qrcode": "^1.4.4",
     "storyboard": "^3.1.4",
     "storyboard-listener-console": "^3.1.4",
     "ts-jest": "^25.2.1",
-    "typescript": "^3.8.3",
-    "yaqrcode": "^0.2.1"
+    "typescript": "^3.8.3"
   },
   "jest": {
     "testRegex": "src/.*__tests__/.*\\.(test|spec)\\.(js|jsx)$",
