Readied the compiler config for publishing

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "docx-templates",
   "version": "3.1.1",
   "description": "Template-based docx report creation",
-  "main": "lib/indexNode.js",
-  "browser": "lib/indexBrowser.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "author": "Guillermo Grau Panea",
   "license": "MIT",
   "keywords": [
@@ -23,13 +23,13 @@
     "url": "git+https://github.com/guigrpa/docx-templates.git"
   },
   "scripts": {
+    "compile": "tsc",
     "travis": "yarn compile && yarn test",
     "jest": "jest --watch --coverage",
     "test": "yarn testCovFull",
     "testCovFull": "yarn testCovPrepare && yarn testDev && yarn testCovReport",
     "testCovPrepare": "rm -rf ./coverage .nyc_output .nyc_tmp && mkdir .nyc_tmp",
     "testDev": "NODE_ENV=development jest --coverage && mv .nyc_output/coverage-final.json .nyc_tmp/coverage-dev.json && rm -rf .nyc_output",
-    "testProd": "NODE_ENV=production jest --coverage && mv .nyc_output/coverage-final.json .nyc_tmp/coverage-prod.json && rm -rf .nyc_output",
     "testCovReport": "cp -r .nyc_tmp .nyc_output && nyc report --reporter=html --reporter=lcov --reporter=text"
   },
   "engines": {
